# DailyIFA

./: .gitignore  .replit  ACCESS_ENHANCED_DASHBOARD.md  ANDROID_FRAMEWORK_EVALUATION.md  AUDIO_ACTIVATION_REPORT.md  AUDIO_FILE_CHECKLIST.md  AUDIO_SYSTEM_ACTIVATED.json  AUTHENTIC_AUDIO_ACTIVATION_INSTRUCTIONS.md  AUTHENTIC_AUDIO_VERIFICATION.md  AUTHENTIC_AUDIO_WORKFLOW.md  AUTHENTIC_NIGERIAN_PRONUNCIATION_REQUIREMENTS.md  COMPLETE_GITHUB_UPLOAD.md  COMPLETE_UPLOAD_WITH_TOKEN.md  COMPREHENSIVE_AUDIO_DISABLING_STATUS.md  CORRECTED_GIT_CONFIG.md  CORRECT_UPLOAD_PROCESS.md  CURRENT_STATUS.md  DEPLOYMENT.md  Dailyreading card  ENHANCED_ODU_PRONUNCIATION_GUIDE.md  EXCEL_INTEGRATION_REPORT.md  EXPORT_STRATEGY_GUIDE.md  FINAL_GITHUB_INSTRUCTIONS.md  FINAL_NIGERIAN_AUTHENTICITY_STATUS.md  FINAL_UPLOAD_COMMAND.md  FLASK_CALENDAR_INTEGRATION_README.md  FLASK_CALENDAR_README.md  GITHUB_PUSH_STATUS.md  GITHUB_SETUP.md  GITHUB_TOKEN_UPLOAD.md  GOOGLE_PLAY_PORTING_CHECKLIST.md  GREGORIAN_YORUBA_CONVERSION_COMPLETE.md  GUIDE.md  NIGERIAN_AUDIO_STATUS.md  NIGERIAN_AUTHENTICITY_IMPLEMENTATION_STATUS.md  ODU_IFA_RECORDING_GUIDE.md  PRE_DEPLOYMENT_OPTIMIZATION_GUIDE.md  PRE_LAUNCH_AUDIT_REPORT.md  QUICK_RECORDING_SETUP.md  README.md  (+89 more)
attached_assets/: 256_ODU_graph_1752246322368.xlsx  AUD-20250701-WA0013_1751471028176.opus  AUD-20250701-WA0014_1751470524384.opus  AUD-20250701-WA0015_1751469826040.opus  AUD-20250701-WA0016_1751469336961.opus  AUD-20250701-WA0022_1751471361018.opus  AUD-20250701-WA0023_1751471361015.opus  AUD-20250704-WA0002_1751656568948.opus  (+48 more)
ifa-mobile-app/: App.tsx  (+6 more)
(+264 files in other folders)
