[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.3",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.2.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "xlrd>=2.0.2",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "apscheduler>=3.11.0",
    "flask-migrate>=4.1.0",
    "flask-admin>=1.6.1",
    "pusher>=3.3.3",
]
